--- a/src/Website/index.html
+++ b/src/Website/index.html
@@ -85,9 +85,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://twitter.com/us_undystopia" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.facebook.com/un.dystopia.9" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/undystopia/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/undystopia" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
